--- a/CareConnect/package.json
+++ b/CareConnect/package.json
@@ -14,7 +14,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
